# grupo-98-tech-challenger-fase2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  entrypoint.sh  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  types.ts
client/src/api/: pipeline.ts  recommendations.ts
client/src/components/: HealthStatus.tsx  PipelinePanel.tsx  RecommendationCard.tsx  UserSearch.tsx
data/processed/: dataset_metadata.json
docs/: ML_CANVAS.md  TESTING_GUIDE.md
notebooks/: 01_eda_retailrocket.ipynb  02_eda_movielens.ipynb  03_model_experiments_retailrocket.ipynb  04_model_experiments_movielens.ipynb
scripts/: build_movielens_interactions.py  compare_models.py  download_dataset.sh  register_model.py  validate_env.py
src/api/: app.py  schemas.py
src/api/routers/: pipeline.py  recommendations.py
src/api/services/: inference.py  job_manager.py
src/ecommerce_recommender/: __init__.py  config.py
src/ecommerce_recommender/evaluation/: __init__.py  metrics.py
src/ecommerce_recommender/models/: __init__.py  recommender.py
src/ecommerce_recommender/training/: __init__.py  trainer.py
src/evaluation/: __init__.py  cli.py  evaluator.py  metrics.py
src/models/: __init__.py  baseline.py  factory.py  mlp.py
src/preprocessing/: __init__.py  cli.py  feature_cli.py  feature_engineering.py  pipeline.py  strategies.py
src/training/: __init__.py  cli.py  dataset.py  tracker.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  seed.py
tests/: conftest.py
tests/unit/: test_api.py  test_config.py  test_metrics.py  test_models.py  test_preprocessing.py  test_recommender_factory.py  test_trainer.py
