[project]
name = "ecommerce-recommender"
version = "0.1.0"
description = "Sistema de recomendação de produtos com pipeline MLOps completo"
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.11.0",
    "dvc>=3.49.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_recommender"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
