[project]
name = "ecommerce-recommender"
version = "0.1.0"
description = "Sistema de recomendação de produtos para e-commerce com rede neural (PyTorch) e práticas de MLOps"
authors = [
    { name = "Guilherme Ramos Couceiro" },
    { name = "Lucas Pestana" },
    { name = "Cristiano" },
    { name = "Wesley" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "mlflow==3.13.0",
    "dvc>=3.49.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.43.34",
    "cryptography>=48.0.0",
]

[project.scripts]
recommend-preprocess = "preprocessing.cli:main"
recommend-features = "preprocessing.feature_cli:main"
recommend-train = "training.cli:main"
recommend-evaluate = "evaluation.cli:main"
recommend-serve = "api.app:serve"

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.0",
    "pre-commit>=3.7.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "plotly>=6.8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/api",
    "src/evaluation",
    "src/models",
    "src/preprocessing",
    "src/training",
    "src/utils",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Notebooks de EDA: linhas longas (saídas, configs de plot) são aceitáveis.
"notebooks/*.ipynb" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
